# hello-flit

./: .editorconfig  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements_dev.txt  setup.cfg  tasks.py
.github/: ISSUE_TEMPLATE.md  renovate.json
.github/workflows/: dispatch.yml  docs.yml  main.yml
docs/: index.md
hello_flit/: __init__.py  cli.py  config.py  core.py
tests/: __init__.py  conftest.py  test_hello_flit.py
